# franka_panda_RL

./: .gitignore  LICENSE  README.md
am_franka_controllers/: CMakeLists.txt  CMakeLists2.txt  am_franka_controllers.xml  package.xml
am_franka_controllers/config/: controllers.yaml
am_franka_controllers/include/am_franka_controllers/: cart_vel_controller.h  cartesian_impedance_controller.h  cartesian_position_controller.h  controller_base.h  controller_interface.h  osc_controller.h  position_controller.h  position_servo.h  vacuum_pump.h
am_franka_controllers/launch/: controller.launch.py  franka.launch.py  realtime_controller.launch.py
am_franka_controllers/src/: cartesian_impedance_controller.cpp  cartesian_position_controller.cpp  controller_base.cpp  controller_interface.cpp  controller_runner.cpp  vacuum_gripper_test.cpp  vacuum_pump.cpp
am_franka_controllers/src/realtime_servo/: cart_vel_controller.cpp  osc_controller.cpp  position_controller.cpp  position_servo.cpp
am_robot_utils/: CMakeLists.txt  package.xml
am_robot_utils/include/am_robot_utils/: base.h
am_robot_utils/include/am_robot_utils/geometry/: calculation.h  geometry_base.h
am_robot_utils/include/am_robot_utils/moveit/: moveit_base.h  moveit_utils.h
am_robot_utils/src/geometry/: CMakeLists.txt  calculation.cpp
am_robot_utils/src/moveit/: CMakeLists.txt  moveit_base.cpp  moveit_utils.cpp
franka_action_interface/: CMakeLists.txt  package.xml
franka_action_interface/action/: ImageSeg.action  Reach.action
franka_control/: CMakeLists.txt  README.md  demo_data.json  package.xml  repo_data.json
franka_control/configs/: default.rviz  moveit.yaml
franka_control/include/franka_control/: geometry_utils.h  motion_generator.hpp  moveit_circle.h  moveit_control.hpp  ros2_ReachClient.h
franka_control/include/franka_control/utils/: geometry_utils.h  moveit_base.h  moveit_utils.h
franka_control/launch/: demo1.launch.py  demo2.launch.py  demo_hand.launch.py  handeye_calibration.launch  moveit_control.launch.py  moveit_launcher.launch.py
franka_control/src/: moveit_control.cpp
franka_control/src/client/: CMakeLists.txt  ros2_reachClient.cpp
franka_control/src/layout_repeat/: CMakeLists.txt  layout_repeat_demo.cpp
franka_control/src/moveit/: CMakeLists.txt  follow_targets_node.cpp  hand_process_node.cpp  hand_servo.cpp  moveit_circle.cpp  moveit_control.cpp  moveit_control.txt  moveit_control2.txt  round_views.cpp
franka_control/src/moveit/demo_hand/: command_executor.cpp  round_views.cpp
franka_control/src/moveit/utils/: moveit_base.cpp  moveit_utils.cpp
franka_control/src/nerf_pipeline/: CMakeLists.txt  pick_place.cpp  round_move.cpp
franka_control/src/realtime/: CMakeLists.txt  hand_follow_node.cpp  motion_generator.cpp
franka_control/src/utils/: CMakeLists.txt  geometry_utils.cpp
franka_demo_bringup/: CMakeLists.txt  package.xml
franka_demo_bringup/configs/nerf_pipeline/: round_move.yaml
franka_demo_bringup/launch/: nerf_pipeline_round_move.launch.py
franka_demo_bringup/src/demo_hand/: CMakeLists.txt  demo_hand_runner.cpp  joints_data.json
franka_gym/: Agent.py  ReachSever.py  main.py  tac_continuous_reach.py
franka_gym/backup/: rpy2quat.py
franka_gym/model/: policy1000.pkl  policy200.pkl  policy400.pkl  policy600.pkl  policy800.pkl
franka_gym/script/: Agent.py  ReachSever.py  TacNet.py  handeye_calibration.py  ros2_reachSever.py
franka_gym/script/backup/: reach_example.py  record.txt  rpy2quat.py
franka_gym/script/model/: policy1000.pkl  policy200.pkl  policy400.pkl  policy600.pkl  policy800.pkl
franka_interface/: CMakeLists.txt  README.md  package.xml
franka_interface/action/: CartPoseSet.action
franka_interface/srv/: GetIdxPose.srv  StackPick.srv  VacuumCommand.srv
franka_perception/: package.xml  setup.cfg  setup.py
franka_perception/configs/: default.txt  default2.txt  rs_config.yaml
franka_perception/franka_perception/: .gitignore  BoxDetectorNode.py  HandTrackerNode.py  MoveBoxNode.py  ObjDetectorNode.py  ShapeDetector.py  __init__.py  imageSeg_sever.py  o3d_utils.py  record.py  ros_utils.py  shape_detector_node.py  utils.py
franka_perception/franka_perception/DTOID/: .gitignore  DTOIDModule.py  network.py  requirements.txt  siamesenet.py
franka_perception/franka_perception/base/: ImageNodeBase.py  MarkerDetector.py
franka_perception/franka_perception/utils/: BoxDetector.py  HandTrackingModule.py
franka_perception/franka_perception/yolov5/: detector.py
franka_perception/franka_perception/yolov5/data/: lscd_2cls.yaml
franka_perception/franka_perception/yolov5/models/: common.py
franka_perception/test/: o3d_test.py
franka_perception/test/plane_pose_detect/: o3d_test.py
franka_rl_env/: package.xml  setup.cfg  setup.py
franka_rl_env/franka_rl_env/reach/: Agent.py  ReachSever.py  TacNet.py  main.py  ros2_reachSever.py
franka_rl_env/franka_rl_env/reach/model/: policy400.pkl  policy800.pkl
franka_vision/: CMakeLists.txt  package.xml
franka_vision/include/franka_vision/aruco/: aruco_detector.h  box_detector.h
franka_vision/src/: box_detector_node.cpp
franka_vision/src/aruco/: CMakeLists.txt  aruco_detector.cpp  aruco_detector_node.cpp  box_detector.cpp  boxes_detector.cpp
franka_vision/test/aruco/: aruco_detector_test.cpp
moveit_control/: CMakeLists.txt  package.xml
moveit_control/config/: moveit_cpp.yaml
moveit_control/include/moveit_control/: moveit_cpp_base.h
moveit_control/launch/: moveit.launch.py
moveit_control/rviz/: moveit.rviz
moveit_control/src/: moveit_cpp_base.cpp  moveit_cpp_tutorial.cpp
panda_gym/: agent.py  main.py  reach_example.py
panda_gym/model/: policy200.pkl  policy600.pkl
ros_record/: ROS build_tools.md
