<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_action_interface</name>
  <version>0.1.1</version>
  <description>It includes description files of customized ROS action, which will be used in other packages.</description>
  <maintainer email="tanr0041@e.ntu.edu.sg">Tan Runjia</maintainer>
  <license>MIT</license>
  <author email="tanr0041@e.ntu.edu.sg">Tan Runjia</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>